Fixed alignment and tabs issue

--- a/src/_scss/pages/recipientLanding/recipientLandingPage.scss
+++ b/src/_scss/pages/recipientLanding/recipientLandingPage.scss
@@ -26,15 +26,18 @@
     }
 
     .pagination {
-        @include display(inline-flex);
         @include flex-direction(column);
         @include align-items(flex-end);
-        border-bottom: 1px solid #aeb0b5;
+
+        &:nth-of-type(2) {
+            border-bottom: 1px solid #aeb0b5;
+        }
         .pager {
             @include justify-content(flex-end);
             margin-top: rem(40);
         }
     }
+
     .results-table-section { 
         position: relative;
         min-height: rem(200);
